# stokesim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: example_basic.gen  example_minimal.yml
config/models/: earth.py  example_actuators.py  example_airplane.py  example_deltawing.py  example_quadcopter.py  example_quadwing.py  example_sensors.py  sysid_prototype
docs/: Doxyfile.in  documentation.html
include/stokesim/: common.h  simulator.h
include/stokesim/io/: plugin.h
include/stokesim/math/: basic.h  gaussian.h  so3.h
include/stokesim/physics/: actuator.h  atmos.h  body.h  clock.h  craft.h  env.h  geoid.h  magneto.h  octree.h  sensor.h  world.h
include/stokesim/physics/actuator_types/: launcher.h  surface.h  thruster.h  types.h
include/stokesim/physics/sensor_types/: accelerometer.h  barometer.h  gps.h  gyroscope.h  imu.h  magnetometer.h  motion_capture.h  pitot.h  rc_channels.h  thermometer.h  types.h
plugins/logger/: logger.cpp  plotter
plugins/stokesros/: example_basic.rviz  example_basic_sat.rviz  interface_node  joystick.py  rosclock.cpp  stokesros.cpp
plugins/trigger/: events.h  trigger.cpp
source/: main.cpp  simulator.cpp
source/io/: plugin.cpp
source/math/: so3.cpp
source/physics/: actuator.cpp  atmos.cpp  body.cpp  clock.cpp  craft.cpp  env.cpp  geoid.cpp  magneto.cpp  octree.cpp  sensor.cpp  world.cpp
source/physics/actuator_types/: launcher.cpp  surface.cpp  thruster.cpp
source/physics/sensor_types/: accelerometer.cpp  barometer.cpp  gps.cpp  gyroscope.cpp  imu.cpp  magnetometer.cpp  motion_capture.cpp  pitot.cpp  rc_channels.cpp  thermometer.cpp
